# generative-ai-security

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT_WEEKLY_SUBMISSIONS.backup.md  AUDIT_REPORT_WEEKLY_SUBMISSIONS.md  CHANGELOG.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  README_GPU.md  STRUCTURE_REPAIR_PLAN.md  STRUCTURE_REPAIR_REPORT.md  WEEKLY_REVIEW_CHECKLIST.md  docker-compose.yml  project_config.yaml  pyproject.toml
00_class_materials/: AI 보안 박사과정 논문지도 세미나.md  README.md  final_assignment_summary.md  final_report_assignment_ai_security.md  formula_audit_index.md  grading_policy.md  math_formula_toolchain.md  syllabus_summary.md  weekly_paper_list.md  강의논문.md  논문수집_검수보고서.md
01_codex_prompts/: 00_create_folder_structure.md  00_folder_structure_integration_mapping.md  01_create_common_templates.md  02_create_final_paper_structure.md  99_write_final_paper.md  W01_deep_learning_ml_security.md  W02_optimization_data_poisoning.md  W03_computer_vision_adversarial.md  W04_transformer_nlp_security.md  W05_ssl_backdoor.md  W06_diffusion_gan_deepfake.md  W07_llm_security_privacy.md  W08_rag_prompt_injection.md  W09_drl_cybersecurity.md  W10_federated_learning_security.md  W11_differential_privacy_mi.md  W12_nn_verification_xai.md  W13_model_stealing_watermarking.md  W14_mlops_supply_chain.md  W15_reproducibility_xai_paper.md
02_report_templates/: README.md  ai_worklog_template.md  experiment_report_template.md  final_paper_bridge_template.md  nature_research_slide_style.css  one_page_handout_template.md  paper_matrix_template.md  (+10 more)
(+994 files in other folders)
