[project]
name = "aisec-research-env"
version = "0.1.0"
description = "Shared AI security research environment for Docker, uv, CUDA 13.2, and Python 3.11"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "torch==2.12.1+cu132",
    "torchvision==0.27.1+cu132",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
